# wanpipe

./: .ChangeLog.beta.swp  .Makefile.swp  .Setup.rej.swp  .Setup.swo  .git_info  .router_version  .setup_drv_compile.log.swp  .svn_info  .svn_info_linux  COPYING  ChangeLog  ChangeLog.3.4  ChangeLog.3.5  ChangeLog.beta  ChangeLog.beta.bak  ChangeLog.stable  ChangeLog.stable.bak  Makefile  Makefile.debian11  README  README-1.install  README-2.config  README-4.debugging  README.asterisk  README.changes  Setup  Setup.old  diff  file  lxdialog_output  make.out  smg_appli-unix-20080304-17h13m02.cap  smg_appli-unix-20080304-17h13m32.cap  wanpipe.spec  wanpipe@.service
api/libsangoma/: .in  Makefile  Makefile.am  Makefile.in  Makefile.mine  Makefile.r11  Makefile.r9  cleanup.sh  config.h.in  config.status  configure  configure.in  diff  doxygen.config  init-automake.sh  libsangoma-pvt.h  libsangoma.c  libsangoma.def  libsangoma.h  libsangoma.vcproj  libsangoma_hwec.c  libtool  sources  stats.out  svn-commit.2.tmp  svn-commit.tmp
api/libsangoma.orig/: .cfg_log  Makefile.in  config.h.in  configure  configure.in
api/libsangoma.orig/.svn/text-base/: configure.svn-base  libhpsangoma.c.svn-base  libhpsangoma.h.svn-base  libhpsangoma_priv.h.svn-base
api/libsangoma.orig/.svn/tmp/: tempfile.6.tmp  tempfile.8.tmp
api/libsangoma.orig/autom4te.cache/: output.1  output.2  requests  traces.1  traces.2
api/libsangoma.orig/examples/.svn/: entries
api/libsangoma/.deps/: libsangoma_la-libsangoma.Plo  libsangoma_la-sangoma_pri.Plo
api/libsangoma/.svn/: all-wcprops  dir-prop-base  entries
api/libsangoma/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  cleanup.sh.svn-base  config.h.in.svn-base  config.log.svn-base  config.status.svn-base  configure.in.svn-base  configure.svn-base  init-automake.sh.svn-base  libhpsangoma.c.svn-base  libhpsangoma.h.svn-base  libhpsangoma_priv.c.svn-base  libsangoma-doxygen.config.svn-base  libsangoma-pvt.h.svn-base  libsangoma.c.svn-base  libsangoma.def.svn-base  libsangoma.h.svn-base  libsangoma.sln.svn-base  libsangoma.vcproj.DAVIDRNEW.User.user.svn-base  libsangoma.vcproj.svn-base  libsangoma_config.c.svn-base  libsangoma_hwec.c.svn-base  libtool.svn-base  sources.svn-base  svn-commit.tmp.svn-base
api/libsangoma/.svn/tmp/: tempfile.10.tmp  tempfile.11.tmp  tempfile.12.tmp  tempfile.13.tmp  tempfile.14.tmp  (+18 more)
api/libsangoma/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
api/libsangoma/examples/: Makefile
api/libsangoma/sample_c/: Makefile.Linux  lib_api.c  lib_api.h  sample.c  sources
api/libsangoma/sample_cpp/: Makefile.Linux  compile.bat  sample.cpp  sample.h  sangoma_cthread.cpp  sangoma_cthread.h  sangoma_interface.cpp  sangoma_interface.h  sangoma_port.h  sangoma_port_configurator.cpp  sangoma_port_configurator.h  sources
api/libsangoma/sample_cpp_ctrl_dev/: buildchk_wnet_amd64.wrn  buildfre_wxp_x86.wrn  sample.cpp  sample.h  sample.opt  sangoma_api_ctrl_dev.cpp  sangoma_api_ctrl_dev.h  sangoma_interface.cpp  sangoma_port.cpp  sangoma_port_configurator.h
api/libstelephony/: Makefile.am  PToneDecoder.cpp  PToneDecoder.h  Q931EventsDecoder.cpp  Q931EventsDecoder.h  Sink.cpp  StdAfx.h  libstelephony.h  sources  stelephony.cpp  stelephony.h  stelephony.rc  stelephony.vcproj
api/libstelephony/.svn/: all-wcprops  dir-prop-base  entries
api/libstelephony/stel_tone/: fsk.c  libstelephony_tone.h  libteletone_generate.c  libteletone_generate.h  sources  stel_tone.c  uart.c
(+1837 files in other folders)
