#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(libsangoma, 1.0.0, ncorbic@sangoma.com)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(libsangoma,1.0.0)
# Checks for programs.

# Checks for libraries.
AC_PROG_CC
AC_PROG_LIBTOOL
AC_CHECK_PROG(AR, ar, ar, no)    

AC_CHECK_HEADERS(fcntl.h netinet/in.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/time.h unistd.h math.h)

AC_ARG_WITH(libpri,
	[  --with-libpri=<path> enable pri support],[libpripath="$withval"])

AM_CONDITIONAL([LIBPRI],[test -d "$libpripath" ])
AC_SUBST([libpripath])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([gettimeofday memset select socket])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
